--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     }
   },
   "dependencies": {
+    "aurelia-authentication": "github:doktordirk/aurelia-authentication#dep-update",
     "aurelia-bootstrapper-webpack": "^1.0.0-rc.1.0.0",
     "aurelia-event-aggregator": "^1.0.0-rc.1.0.0",
     "aurelia-fetch-client": "^1.0.0-rc.1.0.0",
